--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <div class="login-container">
+        <div id="signInMessage" class="messageDiv" style="display:none;"></div>
+
         <!-- Logo with T2 -->
         <div class="logo">
             <span class="text-logo">T<span>2</span></span>
