--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="login-container">
-        <div id="signInMessage" class="messageDiv" style="display:none;"></div>
+        <div id="signInMessage" class="messageDiv" style="display:none; color: red; "></div>
 
         <!-- Logo with T2 -->
         <div class="logo">
